--- a/assignment2/Assignment2.ipynb
+++ b/assignment2/Assignment2.ipynb
@@ -68,15 +68,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.615384615385\n",
+      "9.89902989507e-05\n",
+      "910.836065574\n"
+     ]
+    }
+   ],
+   "source": [
+    "#A - we chose box #1\n",
+    "#B - we picked red ball\n",
+    "pa = 0.5 #P(A)\n",
+    "pb = 0.5 * 0.8 + 0.5 * 0.5 #P(B)\n",
+    "pba = 0.8 #P(B|A)\n",
+    "pab = pba * pa / pb #P(A|B) -> this is the response\n",
+    "print(pab)\n",
+    "#########################################################################################\n",
+    "#A\n",
+    "#A - got positive result\n",
+    "#B - is carrier\n",
+    "pb = 1e-6 #P(B)\n",
+    "pa = pb * 0.99 + (1. - pb) * 0.01 #P(A)\n",
+    "pab = 0.99\n",
+    "pba = pab * pb / pa\n",
+    "print(pba)\n",
+    "#B\n",
+    "pb1 = 1e-3 # P(B1)\n",
+    "pa = pb1 * 0.99 + (1. - pb1) * 0.01 #P(A)\n",
+    "pab1 = 0.99\n",
+    "pb1a = pab1 * pb1 / pa\n",
+    "print(pb1a/pba)\n",
+    "#C\n",
+    "#T - test shows correct result\n",
+    "# we're looking for P(T)\n",
+    "#B - European is a carrier\n",
+    "#A - test shows positive\n",
+    "pb = 1e-6 #P(B)\n",
+    "#pt -- P(T)\n",
+    "#pa = pb * pt + (1 - pb) * (1 - pt) -- P(A)\n",
+    "#pab = pt\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# TODO Fill in the calculations instead of doing them by hand\n",
-    "# TODO Be precise and remember to add comments!"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -311,7 +358,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We can easily access the data.\n",
@@ -642,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
