--- a/assignment2/Assignment2.ipynb
+++ b/assignment2/Assignment2.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,8 @@
      "text": [
       "0.615384615385\n",
       "9.89902989507e-05\n",
-      "910.836065574\n"
+      "910.836065574\n",
+      "800000.0\n"
      ]
     }
    ],
@@ -95,25 +96,24 @@
     "#B - is carrier\n",
     "pb = 1e-6 #P(B)\n",
     "pa = pb * 0.99 + (1. - pb) * 0.01 #P(A)\n",
-    "pab = 0.99\n",
-    "pba = pab * pb / pa\n",
-    "print(pba)\n",
+    "paIb = 0.99\n",
+    "pbIa = paIb * pb / pa\n",
+    "print(pbIa)\n",
     "#B\n",
     "pb1 = 1e-3 # P(B1)\n",
     "pa = pb1 * 0.99 + (1. - pb1) * 0.01 #P(A)\n",
-    "pab1 = 0.99\n",
-    "pb1a = pab1 * pb1 / pa\n",
-    "print(pb1a/pba)\n",
+    "paIb1 = 0.99\n",
+    "pb1Ia = paIb1 * pb1 / pa\n",
+    "print(pb1Ia/pbIa)\n",
     "#C\n",
     "#T - test shows correct result\n",
     "# we're looking for P(T)\n",
     "#B - European is a carrier\n",
     "#A - test shows positive\n",
     "pb = 1e-6 #P(B)\n",
-    "#pt -- P(T)\n",
-    "#pa = pb * pt + (1 - pb) * (1 - pt) -- P(A)\n",
-    "#pab = pt\n",
-    "\n"
+    "paIb = 0.8 #P(A n B)\n",
+    "#pa = pt * pb + (1 - pb) * (1 - pt)\n",
+    "print(pt)"
    ]
   },
   {
@@ -169,13 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -308,7 +321,7 @@
        "e   10.149   7.352  18.910  15.453      6.418    7.968  7.562  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,6 +332,7 @@
     "\n",
     "wiki_table = u\"\"\"English|French|German|Spanish|Portuguese|Esperanto|Italian|Turkish|Swedish|Polish|Dutch|Danish|Icelandic|Finnish|Czech\\na|8.167|7.636|6.516|11.525|14.634|12.117|11.745|12.920|9.383|10.503|7.486|6.025|10.110|12.217|8.421\\nb|1.492|0.901|1.886|2.215|1.043|0.980|0.927|2.844|1.535|1.740|1.584|2.000|1.043|0.281|0.822\\nc|2.782|3.260|2.732|4.019|3.882|0.776|4.501|1.463|1.486|3.895|1.242|0.565|0|0.281|0.740\\nd|4.253|3.669|5.076|5.010|4.992|3.044|3.736|5.206|4.702|3.725|5.933|5.858|1.575|1.043|3.475\\ne|12.702|14.715|16.396|12.181|12.570|8.995|11.792|9.912|10.149|7.352|18.91|15.453|6.418|7.968|7.562\\nf|2.228|1.066|1.656|0.692|1.023|1.037|1.153|0.461|2.027|0.143|0.805|2.406|3.013|0.194|0.084\\ng|2.015|0.866|3.009|1.768|1.303|1.171|1.644|1.253|2.862|1.731|3.403|4.077|4.241|0.392|0.092\\nh|6.094|0.737|4.577|0.703|0.781|0.384|0.636|1.212|2.090|1.015|2.380|1.621|1.871|1.851|1.356\\ni|6.966|7.529|6.550|6.247|6.186|10.012|10.143|9.600|5.817|8.328|6.499|6.000|7.578|10.817|6.073\\nj|0.153|0.613|0.268|0.493|0.397|3.501|0.011|0.034|0.614|1.836|1.46|0.730|1.144|2.042|1.433\\nk|0.772|0.049|1.417|0.011|0.015|4.163|0.009|5.683|3.140|2.753|2.248|3.395|3.314|4.973|2.894\\nl|4.025|5.456|3.437|4.967|2.779|6.104|6.510|5.922|5.275|2.564|3.568|5.229|4.532|5.761|3.802\\nm|2.406|2.968|2.534|3.157|4.738|2.994|2.512|3.752|3.471|2.515|2.213|3.237|4.041|3.202|2.446\\nn|6.749|7.095|9.776|6.712|4.446|7.955|6.883|7.987|8.542|6.237|10.032|7.240|7.711|8.826|6.468\\no|7.507|5.796|2.594|8.683|9.735|8.779|9.832|2.976|4.482|6.667|6.063|4.636|2.166|5.614|6.695\\np|1.929|2.521|0.670|2.510|2.523|2.755|3.056|0.886|1.839|2.445|1.57|1.756|0.789|1.842|1.906\\nq|0.095|1.362|0.018|0.877|1.204|0|0.505|0|0.020|0|0.009|0.007|0|0.013|0.001\\nr|5.987|6.693|7.003|6.871|6.530|5.914|6.367|7.722|8.431|5.243|6.411|8.956|8.581|2.872|4.799\\ns|6.327|7.948|7.270|7.977|6.805|6.092|4.981|3.014|6.590|5.224|3.73|5.805|5.630|7.862|5.212\\nt|9.056|7.244|6.154|4.632|4.336|5.276|5.623|3.314|7.691|2.475|6.79|6.862|4.953|8.750|5.727\\nu|2.758|6.311|4.166|2.927|3.639|3.183|3.011|3.235|1.919|2.062|1.99|1.979|4.562|5.008|2.160\\nv|0.978|1.838|0.846|1.138|1.575|1.904|2.097|0.959|2.415|0.012|2.85|2.332|2.437|2.250|5.344\\nw|2.360|0.074|1.921|0.017|0.037|0|0.033|0|0.142|5.813|1.52|0.069|0|0.094|0.016\\nx|0.150|0.427|0.034|0.215|0.253|0|0.003|0|0.159|0.004|0.036|0.028|0.046|0.031|0.027\\ny|1.974|0.128|0.039|1.008|0.006|0|0.020|3.336|0.708|3.206|0.035|0.698|0.900|1.745|1.043\\nz|0.074|0.326|1.134|0.467|0.470|0.494|1.181|1.500|0.070|4.852|1.39|0.034|0|0.051|1.503\\nà|0|0.486|0|0|0.072|0|0.635|0|0|0|0|0|0|0|0\\nâ|0|0.051|0|0|0.562|0|0|0|0|0|0|0|0|0|0\\ná|0|0|0|0.502|0.118|0|0|0|0|0|0|0|1.799|0|0.867\\nå|0|0|0|0|0|0|0|0|1.338|0|0|1.190|0|0.003|0\\nä|0|0|0.578|0|0|0|0|0|1.797|0|0|0|0|3.577|0\\nã|0|0|0|0|0.733|0|0|0|0|0|0|0|0|0|0\\ną|0|0|0|0|0|0|0|0|0|0.699|0|0|0|0|0\\næ|0|0|0|0|0|0|0|0|0|0|0|0.872|0.867|0|0\\nœ|0|0.018|0|0|0|0|0|0|0|0|0|0|0|0|0\\nç|0|0.085|0|0|0.530|0|0|1.156|0|0|0|0|0|0|0\\nĉ|0|0|0|0|0|0.657|0|0|0|0|0|0|0|0|0\\nć|0|0|0|0|0|0|0|0|0|0.743|0|0|0|0|0\\nč|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0.462\\nď|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0.015\\nð|0|0|0|0|0|0|0|0|0|0|0|0|4.393|0|0\\nè|0|0.271|0|0|0|0|0.263|0|0|0|0|0|0|0|0\\né|0|1.504|0|0.433|0.337|0|0|0|0|0|0|0|0.647|0|0.633\\nê|0|0.218|0|0|0.450|0|0|0|0|0|0|0|0|0|0\\në|0|0.008|0|0|0|0|0|0|0|0|0|0|0|0|0\\nę|0|0|0|0|0|0|0|0|0|1.035|0|0|0|0|0\\ně|0|0|0|0|0|0|0|0|0|0|0|0|0|0|1.222\\nĝ|0|0|0|0|0|0.691|0|0|0|0|0|0|0|0|0\\nğ|0|0|0|0|0|0|0|1.125|0|0|0|0|0|0|0\\nĥ|0|0|0|0|0|0.022|0|0|0|0|0|0|0|0|0\\nî|0|0.045|0|0|0|0|0|0|0|0|0|0|0|0|0\\nì|0|0|0|0|0|0|0.030|0|0|0|0|0|0|0|0\\ní|0|0|0|0.725|0.132|0|0|0|0|0|0|0|1.570|0|1.643\\nï|0|0.005|0|0|0|0|0|0|0|0|0|0|0|0|0\\nı|0|0|0|0|0|0|0|5.114|0|0|0|0|0|0|0\\nĵ|0|0|0|0|0|0.055|0|0|0|0|0|0|0|0|0\\nł|0|0|0|0|0|0|0|0|0|2.109|0|0|0|0|0\\nñ|0|0|0|0.311|0|0|0|0|0|0|0|0|0|0|0\\nń|0|0|0|0|0|0|0|0|0|0.362|0|0|0|0|0\\nň|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0.007\\nò|0|0|0|0|0|0|0.002|0|0|0|0|0|0|0|0\\nö|0|0|0.443|0|0|0|0|0.777|1.305|0|0|0|0.777|0.444|0\\nô|0|0.023|0|0|0.635|0|0|0|0|0|0|0|0|0|0\\nó|0|0|0|0.827|0.296|0|0|0|0|1.141|0|0|0.994|0|0.024\\nõ|0|0|0|0|0.040|0|0|0|0|0|0|0|0|0|0\\nø|0|0|0|0|0|0|0|0|0|0|0|0.939|0|0|0\\nř|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0.380\\nŝ|0|0|0|0|0|0.385|0|0|0|0|0|0|0|0|0\\nş|0|0|0|0|0|0|0|1.780|0|0|0|0|0|0|0\\nś|0|0|0|0|0|0|0|0|0|0.814|0|0|0|0|0\\nš|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0.688\\nß|0|0|0.307|0|0|0|0|0|0|0|0|0|0|0|0\\nť|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0.006\\nþ|0|0|0|0|0|0|0|0|0|0|0|0|1.455|0|0\\nù|0|0.058|0|0|0|0|0.166|0|0|0|0|0|0|0|0\\nú|0|0|0|0.168|0.207|0|0|0|0|0|0|0|0.613|0|0.045\\nû|0|0.060|0|0|0|0|0|0|0|0|0|0|0|0|0\\nŭ|0|0|0|0|0|0.520|0|0|0|0|0|0|0|0|0\\nü|0|0|0.995|0.012|0.026|0|0|1.854|0|0|0|0|0|0|0\\nů|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0.204\\ný|0|0|0|0|0|0|0|0|0|0|0|0|0.228|0|0.995\\nź|0|0|0|0|0|0|0|0|0|0.078|0|0|0|0|0\\nż|0|0|0|0|0|0|0|0|0|0.706|0|0|0|0|0\\nž|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0.721\"\"\"\n",
     "df = pd.read_table(StringIO(wiki_table), sep='|', index_col=0)\n",
+    "# print(df[\"English\"])\n",
     "df.head()"
    ]
   },
@@ -346,22 +360,56 @@
    },
    "outputs": [],
    "source": [
+    "#1. \n",
+    "#3. This may give any result. If in this out-of-vocabulary word exists at least one letter that doesn't appear in\n",
+    "# the language of whole sentance, the result will be incorrect as the probability for the language that is correct\n",
+    "# answer will be multiplied by 0 at some point. If in the rest of the sentence there are also letters that appear in\n",
+    "# sentence's language only then the result for each language will be 0, computing P(D) will be impossible and \n",
+    "# generally the result will have no meaning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "sentences = [\n",
     "    u\"No dejes para mañana lo que puedas hacer hoy.\",\n",
     "    u\"Przed wyruszeniem w drogę należy zebrać drużynę.\",\n",
     "    u\"Żeby zrozumieć rekurencję, należy najpierw zrozumieć rekurencję.\",\n",
     "    u\"Si vale la pena hacerlo vale la pena hacerlo bien.\",\n",
     "    u\"Experience is what you get when you didn't get what you wanted.\",\n",
-    "    u\"Należy prowokować intelekt, nie intelektualistów.\"]"
+    "    u\"Należy prowokować intelekt, nie intelektualistów.\"]\n",
+    "languages = [u\"English\", u\"Polish\", u\"Spanish\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Languages: English,French,German,Spanish,Portuguese,Esperanto,Italian,Turkish,Swedish,Polish,Dutch,Danish,Icelandic,Finnish,Czech\n",
+      "Letters: a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z, à, â, á, å, ä, ã, ą, æ, œ, ç, ĉ, ć, č, ď, ð, è, é, ê, ë, ę, ě, ĝ, ğ, ĥ, î, ì, í, ï, ı, ĵ, ł, ñ, ń, ň, ò, ö, ô, ó, õ, ø, ř, ŝ, ş, ś, š, ß, ť, þ, ù, ú, û, ŭ, ü, ů, ý, ź, ż, ž\n",
+      "P(ę|Polish) = 1.035\n",
+      "[ 0.06666667  0.06666667  0.06666667  0.06666667  0.06666667  0.06666667\n",
+      "  0.06666667  0.06666667  0.06666667  0.06666667  0.06666667  0.06666667\n",
+      "  0.06666667  0.06666667  0.06666667]\n",
+      "Spanish : No dejes para mañana lo que puedas hacer hoy.\n",
+      "Polish : Przed wyruszeniem w drogę należy zebrać drużynę.\n",
+      "Polish : Żeby zrozumieć rekurencję, należy najpierw zrozumieć rekurencję.\n",
+      "Spanish : Si vale la pena hacerlo vale la pena hacerlo bien.\n",
+      "English : Experience is what you get when you didn't get what you wanted.\n",
+      "Polish : Należy prowokować intelekt, nie intelektualistów.\n"
+     ]
+    }
+   ],
    "source": [
     "# We can easily access the data.\n",
     "langs = list(df)\n",
@@ -374,14 +422,33 @@
     "df_norm = df.divide(df.values.sum(0) * len(langs))\n",
     "print df_norm.values.sum(0)\n",
     "\n",
+    "def language_p(language, sent):\n",
+    "    p = df_norm[language].values.sum(0)\n",
+    "    for l in sent:\n",
+    "        letter = l.encode('utf-8')\n",
+    "        if letter in letters:\n",
+    "            p *= df[language][letter] / 100.\n",
+    "#             print letter\n",
+    "#             print df[language][letter]\n",
+    "    return p\n",
     "\n",
     "def naive_bayes(sent, langs, df_norm):\n",
     "    \"\"\"Returns the most probable language of a sentence\"\"\"\n",
     "    \n",
-    "    # TODO Fill in the rest of the code\n",
-    "    raise NotImplementedError\n",
+    "    # I skip computing P(D) as it won't affect the result\n",
+    "    best_p = 0\n",
+    "    best_lang = \"\"\n",
+    "#     print(sent)\n",
+    "    for l in languages:\n",
+    "        p = language_p(l, sent) \n",
+    "#         print(l)\n",
+    "#         print(p)\n",
+    "        if p > best_p:\n",
+    "            best_p = p\n",
+    "            best_lang = l\n",
+    "            \n",
+    "    return best_lang\n",
     "    \n",
-    "\n",
     "for sent in sentences:\n",
     "    print naive_bayes(sent, langs, df_norm), ':', sent"
    ]
